--- a/.gitignore
+++ b/.gitignore
@@ -6,20 +6,30 @@ __pycache__/
 .Python
 env/
 venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+
+# PyTorch
+*.pt
+*.pth
+*.ckpt
 
 # Jupyter Notebook
 .ipynb_checkpoints
-
-# PyTorch
-*.pth
-*.pt
-checkpoint/*.pt
-checkpoint/*.pth
-
-# Data files (optional - remove if you want to include them)
-# *.xlsx
-# *.csv
 
 # IDE
 .vscode/
@@ -32,7 +42,14 @@ checkpoint/*.pth
 .DS_Store
 Thumbs.db
 
-# Temporary files
-*.log
-*.tmp
+# Results (可选：如果不想上传结果文件)
+# results/*.csv
+# results/*.png
+
+# Checkpoint (可选：如果不想上传模型文件)
+checkpoint/*.pt
+checkpoint/*.pth
+
+# Excel temp files
+~$*.xlsx
 
